--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "aksdevops-node",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node src/index.js"
+		"start": "node app.js"
 	},
 	"author": "cloudthat",
 	"license": "ISC",
